# sigflow

./: setup.cfg  setup.py
sigflow/blocks/: base.py
sigflow/core/: utils.py
sigflow/system/: system.py
