[metadata]
name = sigflow
version = 0.0.0
description = A template for creating new python library  # Optional
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
author = TSANG Terrence Tak Lun, LAM Yee Ching
author_email= terrencetec@gmail.com  # Optional
keywords='sample, setuptools, development',  # Optional
license = MIT
license_file = LICENSE
# platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
package_dir =
    =sigflow
install_requires =
    numpy >= 1.1
python_requires = >=3.5, < 4 
zip_safe = False

[options.packages.find]
where = sigflow
# include = *
# exclude = additional

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    # mypy>=0.910
    # flake8>=3.9

[options.entry_points]
console_scripts =
    print-hello-worlds=sigflow.clitools.print_hello_worlds:main

# [options.package_data]
# sigflow = py.typed

